# Research-CLI-Autonomous-Researcher-for-Your-Terminal

./: .gitignore  README.md  pyproject.toml
src/research_cli/: __init__.py  config.py  main.py
src/research_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/research_cli/agents/: critic.py  planner.py  researcher.py  validator.py  writer.py
src/research_cli/graph/: state.py  workflow.py
src/research_cli/prompts/: __init__.py  critic.txt  planner.txt  researcher.txt  validator.txt  writer.txt
src/research_cli/storage/: persistence.py
src/research_cli/tools/: rag.py  scraper.py  search.py
src/research_cli/ui/: cli.py
tests/: conftest.py  test_research_cli.py
